# bsd-xtcp

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  flake.nix  freebsd-tcp-stats-design.md
archive/: README.md  filter-parsing-log.md  filter-parsing-plan.md  integration-testing-old.md  integration-testing-refactor.md  kernel-module-impl-plan.md  kernel-module-steps.md  perf-security-log.md
design/: 01-freebsd-data-sources.md  02-architecture.md  03-implementation.md  04-macos-portability.md  05-kernel-module.md  06-field-comparison.md  07-nix-build-system.md  08-protobuf-schema.md
design/freebsd/: filter-parsing.md  implementation-log.md  implementation-plan.md  kernel-module-perfomrance-and-security-plan.md
docs/design/: 01-freebsd-data-sources.md  02-architecture.md  03-implementation.md  04-macos-portability.md  05-kernel-module.md  06-field-comparison.md  07-nix-build-system.md  08-protobuf-schema.md  09-filter-parsing.md  10-performance-security.md
docs/status/: freebsd-client.md  freebsd.md  integration-tests.md  macos.md  port-testing.md  (+2 more)
man/: tcpstats-reader.1
nix/: checks.nix  constants.nix  cross-freebsd.nix  cross.nix  exporter-deploy.nix  freebsd-deploy.nix  freebsd-integration.nix  kmod-analysis.nix  kmod-tests.nix  package.nix  port-test.nix  proto.nix  shell.nix  tcp-echo-cross.nix  tcp-echo-package.nix  tcp-stats-kld-exporter-package.nix  tcpstats-exporter-package.nix
proto/: tcp_stats.proto
src/: config.rs  convert.rs  lib.rs  main.rs  proto_gen.rs  record.rs  sysctl.rs
status/: freebsd.md  macos.md
(+561 files in other folders)
