[package]
name = "bsd-xtcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
# Protobuf runtime
prost = "0.13"
prost-types = "0.13"

# JSON serialization for proto types
pbjson = "0.7"
pbjson-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
# Proto compilation
prost-build = "0.13"
pbjson-build = "0.7"
